@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.549 2021-04-20 09:10:03+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.550 2021-04-20 13:52:22+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.549 2021-04-20 09:10:03+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.550 2021-04-20 13:52:22+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -10927,7 +10927,9 @@ case $option in
 	fi
 	old=$force
 	force=1
-	printf "export %-35s %s %s %s\n" "`basename $dir`" $owner $group $mode
+	if [ $silent -eq 0 ] ; then
+		printf "export %-35s %s %s %s\n" "`basename $dir`" $owner $group $mode
+	fi
 	export_variables $dir/variables $dir/variables/.variables $owner $group $mode
 	force=$old
 	if [ $option -ne 39 ] ; then
@@ -10986,7 +10988,9 @@ case $option in
 		import_variables $servicedir/$service_name/variables $file 0 $owner $group $mode
 	else
 		dir="$servicedir/$service_name"
-		printf "export %-35s %s %s %s\n" "$dir" $owner $group $mode
+		if [ $silent -eq 0 ] ; then
+			printf "export %-35s %s %s %s\n" "$dir" $owner $group $mode
+		fi
 		if [ ! "$dir/variables/$file" = "$env_file" ] ; then
 			old=$force
 			force=1
