@@ -21,6 +21,7 @@ Release 1.1 Start 27/02/2021
 11. updated svscan man page
 - 20/04/2021
 12. minisvc - make output less verbose with --silent parameter
+13. minisvc - honour --silent in export variables
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
